--- a/.gitignore
+++ b/.gitignore
@@ -20,11 +20,11 @@ x64/
 x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
-bld/
-[Bb]in/
-[Oo]bj/
-[Ll]og/
-[Ll]ogs/
+#bld/
+#[Bb]in/
+#[Oo]bj/
+#[Ll]og/
+#[Ll]ogs/
 
 # Visual Studio 2019/2022 cache/options directory
 .vs/
@@ -207,7 +207,7 @@ ClientBin/
 Thumbs.db
 ehthumbs.db
 Desktop.ini
-$RECYCLE.BIN/
+#$RECYCLE.BIN/
 
 # Mac
 .DS_Store
