9/20: - HP bar 리소스 추가

--- a/shooting_game.vcxproj
+++ b/shooting_game.vcxproj
@@ -203,6 +203,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="Output\bin\content\texture\Enemy.bmp" />
+    <Image Include="Output\bin\content\texture\hp_bar.bmp" />
     <Image Include="Output\bin\content\texture\pilsal.bmp" />
     <Image Include="Output\bin\content\texture\Player.bmp" />
     <Image Include="Output\bin\content\texture\pung.bmp" />
